turn off mobile layout via attribute [data-easy-popup-mobile="false"]

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             ornare urna mi fames bibendum enim nunc neque et nostra placerat.
         </p>
     </div>
-    <div class="demo-2">
+    <div class="demo-2" data-easy-popup-mobile="false">
         <h2>Demo 2</h2>
         <p>
             Ex vestibulum volutpat accumsan dictumst fusce. Tincidunt congue bibendum fermentum fusce pede tristique
