:lipstick: style close button

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         id: 'demo-2',
         title: 'Demo 2',
         triggerSelector: '.open-demo-2',
-        closeButtonHTML: '<span>Click to close</span>',
-        outerClass: 'test'
+        closeButtonHTML: '<span>Custom close button HTML</span>',
+        outerClass: 'outer-class-test'
     });
 
     EasyPopup.get('demo-1').open();
