--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy Popup v0.0.3</title>
+    <title>Easy Popup v0.0.4</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
@@ -39,8 +39,11 @@
 
 
 <div class="container">
-    <h1>Easy Popup v0.0.3</h1>
+    <h1>Easy Popup v0.0.4</h1>
     <p>Click here to <a href="#demo-1">open popup 1</a>.</p>
+    <p>Or here
+        <button data-easy-popup-toggle="demo-1">Open popup 1</button>
+    </p>
     <p>
         Ex vestibulum volutpat accumsan dictumst fusce. Tincidunt congue bibendum fermentum fusce pede tristique
         aliquam lorem maximus lectus pellentesque. Mauris lorem conubia tempus urna ullamcorper tempor eleifend
@@ -90,7 +93,7 @@
         iaculis. Inceptos pulvinar scelerisque duis facilisi elementum suscipit viverra ante velit litora. Viverra
         ornare urna mi fames bibendum enim nunc neque et nostra placerat.
     </p>
-    <div data-easy-popup="demo-1" data-easy-popup-title="Demo 1">
+    <div data-easy-popup="demo-1" data-easy-popup-title="Demo 1" data-easy-popup-mobile="true">
         <h2>Demo 1</h2>
         <p>Click here to <a href="#demo-2">open popup 2</a>.</p>
         <p>
@@ -154,7 +157,8 @@
         title: 'Demo 2',
         triggerSelector: '.open-demo-2',
         closeButtonHTML: '<span>Custom close button HTML</span>',
-        outerClass: 'outer-class-test'
+        outerClass: 'outer-class-test',
+        theme: 'style-2'
     });
 
     EasyPopup.get('demo-1').open();
