:zap: add theme right side

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         iaculis. Inceptos pulvinar scelerisque duis facilisi elementum suscipit viverra ante velit litora. Viverra
         ornare urna mi fames bibendum enim nunc neque et nostra placerat.
     </p>
-    <div data-easy-popup="demo-1" data-easy-popup-title="Demo 1" data-easy-popup-mobile="true">
+    <div data-easy-popup="demo-1" data-easy-popup-title="Demo 1" data-easy-popup-theme="right-side">
         <h2>Demo 1</h2>
         <p>Click here to <a href="#demo-2">open popup 2</a>.</p>
         <p>
@@ -113,7 +113,7 @@
             ornare urna mi fames bibendum enim nunc neque et nostra placerat.
         </p>
     </div>
-    <div class="demo-2" data-easy-popup-mobile="false">
+    <div class="demo-2" data-easy-popup-mobile="true">
         <h2>Demo 2</h2>
         <p>
             Ex vestibulum volutpat accumsan dictumst fusce. Tincidunt congue bibendum fermentum fusce pede tristique
