:sparkles: add option to toggle feature Click outside to close

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         iaculis. Inceptos pulvinar scelerisque duis facilisi elementum suscipit viverra ante velit litora. Viverra
         ornare urna mi fames bibendum enim nunc neque et nostra placerat.
     </p>
-    <div data-easy-popup="demo-1" data-easy-popup-title="Demo 1" data-easy-popup-theme="right-side">
+    <div data-easy-popup="demo-1" data-easy-popup-title="Demo 1" data-easy-popup-theme="right-side"
+         data-easy-popup-click-outside-to-close="false">
         <h2>Demo 1</h2>
         <p>Click here to <a href="#demo-2">open popup 2</a>.</p>
         <p>
