:bug: Easy Popup > Fix a bug when init with data attribute

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
         ornare urna mi fames bibendum enim nunc neque et nostra placerat.
     </p>
 
+
+    <!--  Popup 1  -->
     <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "clickOutsideToClose": "false", "hasMobileLayout":"true"}'
     >
         <h2>Demo 1</h2>
@@ -133,6 +135,9 @@
             ornare urna mi fames bibendum enim nunc neque et nostra placerat.
         </p>
     </div>
+
+
+    <!--  Popup 2  -->
     <div class="demo-2">
         <h2>Demo 2</h2>
         <p>
@@ -152,6 +157,9 @@
             ornare urna mi fames bibendum enim nunc neque et nostra placerat.
         </p>
     </div>
+
+
+    <!--  Popup 3  -->
     <div data-easy-popup="demo-3" data-easy-popup-title="Demo 3" data-easy-popup-click-outside-to-close="true">
         <h2>Demo 3</h2>
         <p>
