:zap: Easy Popup > remove redundant code

--- a/dev/index.html
+++ b/dev/index.html
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-    <h1 data-title="">Easy Popup v0.0.5</h1>
+    <h1 data-title="">Easy Popup</h1>
     <p>Click here to <a href="#demo-1">open popup 1</a>.</p>
     <p>Or here
         <button data-easy-popup-toggle="demo-1">Open popup 1</button>
