:sparkles: add autoShow

--- a/dev/index.html
+++ b/dev/index.html
@@ -86,7 +86,7 @@
 
 
     <!--  Popup 1  -->
-    <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "clickOutsideToClose": "true", "hasMobileLayout":"true"}'
+    <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "autoShow": "5000"}'
     >
         <h2>Demo 1</h2>
         <p>Click here to <a href="#demo-2">open popup 2</a>.</p>
