feat: introduce autoShow feature with piaJS

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easy Popup</title>
+
+    <script defer src="https://cdn.jsdelivr.net/gh/phucbm/pia@0.0.4/dist/pia.min.js"></script>
+
 </head>
 <body>
 
@@ -86,7 +89,7 @@
 
 
     <!--  Popup 1  -->
-    <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "autoShow": "5000"}'
+    <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "autoShow": "5000", "piajs": "7"}'
     >
         <h2>Demo 1</h2>
         <p>Click here to <a href="#demo-2">open popup 2</a>.</p>
