feat: introduce cookie

--- a/dev/index.html
+++ b/dev/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easy Popup</title>
 
-    <script defer src="https://cdn.jsdelivr.net/gh/phucbm/pia@0.0.4/dist/pia.min.js"></script>
-
 </head>
 <body>
 
@@ -89,7 +87,7 @@
 
 
     <!--  Popup 1  -->
-    <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "autoShow": "5000", "piajs": "7"}'
+    <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "autoShow": "5000", "cookie": "session"}'
     >
         <h2>Demo 1</h2>
         <p>Click here to <a href="#demo-2">open popup 2</a>.</p>
