--- a/dev/index.html
+++ b/dev/index.html
@@ -149,7 +149,7 @@
     </div>
 
     <!--  Popup 4  -->
-    <div data-easy-popup='{"id": "demo-4", "title": "Demo 4", "autoShow": "1000", "pia": "{expires:"session"}"}'>
+    <div data-easy-popup='{"id": "demo-4", "title": "Demo 4", "autoShow": "1000", "pia": "2 day"}'>
         <h2>Demo 4</h2>
         <p>
             Ipsum quam efficitur vivamus consectetuer dictumst tincidunt. Lacinia dignissim conubia dui facilisi dictum
