feat(showingTimes): show n times before expiration day, only works with cookie

--- a/dev/index.html
+++ b/dev/index.html
@@ -149,7 +149,7 @@
     </div>
 
     <!--  Popup 4  -->
-    <div data-easy-popup='{"id": "demo-4", "title": "Demo 4", "autoShow": "1000", "cookie": "2 day"}'>
+    <div data-easy-popup='{"id": "demo-4", "title": "Demo 4", "autoShow": "1000", "cookie": "2 day", "showingTimes":"2"}'>
         <h2>Demo 4</h2>
         <p>
             Ipsum quam efficitur vivamus consectetuer dictumst tincidunt. Lacinia dignissim conubia dui facilisi dictum
