--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easy Popup</title>
+
 </head>
 <body>
 
@@ -84,6 +85,10 @@
         ornare urna mi fames bibendum enim nunc neque et nostra placerat.
     </p>
 
+    <p>Click here to <a href="#demo-4">open popup 4</a>.</p>
+    <p>
+        Popup 4 with 2 options: autoShow and cookie
+    </p>
 
     <!--  Popup 1  -->
     <div data-easy-popup='{"id": "demo-1", "title": "Demo 1", "theme":"right-side", "autoShow": "5000"}'
@@ -134,6 +139,18 @@
     <!--  Popup 3  -->
     <div data-easy-popup="demo-3" data-easy-popup-title="Demo 3" data-easy-popup-click-outside-to-close="true">
         <h2>Demo 3</h2>
+        <p>
+            Ipsum quam efficitur vivamus consectetuer dictumst tincidunt. Lacinia dignissim conubia dui facilisi dictum
+            semper nunc magnis nisi tortor non. Inceptos volutpat enim ultricies proin rhoncus vulputate dignissim
+            pulvinar
+            iaculis. Inceptos pulvinar scelerisque duis facilisi elementum suscipit viverra ante velit litora. Viverra
+            ornare urna mi fames bibendum enim nunc neque et nostra placerat.
+        </p>
+    </div>
+
+    <!--  Popup 4  -->
+    <div data-easy-popup='{"id": "demo-4", "title": "Demo 4", "autoShow": "1000", "cookie": "2 day", "showingTimes":"2"}'>
+        <h2>Demo 4</h2>
         <p>
             Ipsum quam efficitur vivamus consectetuer dictumst tincidunt. Lacinia dignissim conubia dui facilisi dictum
             semper nunc magnis nisi tortor non. Inceptos volutpat enim ultricies proin rhoncus vulputate dignissim
