feat(scrollbarWidth): add option scrollbarWidth

--- a/dev/index.html
+++ b/dev/index.html
@@ -19,6 +19,21 @@
                 padding:15px;
             }
         }
+
+
+        /* custom scrollbar */
+        /* Works on Chrome, Edge, and Safari */
+        body::-webkit-scrollbar {
+            width:8px;
+        }
+
+        body::-webkit-scrollbar-track {
+            background:#ccc;
+        }
+
+        body::-webkit-scrollbar-thumb {
+            background-color:#000;
+        }
     </style>
 </head>
 <body class="markdown-body">
